# brain-bot-factory

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_api.sh
app/: api.py  config.py  errors.py  main.py
app/routes/: robots.py  routing.py
jira_tools/: config.py  http.py  jira_api_client.py  jira_client.py  jira_login.py
jira_tools/config/: config.py  credentials.py
jira_tools/scripts/: jira_auth.py
jira_tools/services/: access_robot.py  adf.py  attachments.py  comments.py  errors.py  events.py  http.py  issues.py  robot_lookup.py  routing.py
jira_tools/utils/: parse.py
mes_master_data/: master_robot_record_v1.0.0.json  master_routing_record_v0.1.0.json
standard-work-instructions/jaeger-p2/: base.md
standard-work-instructions/jaeger-p2/bom/: 830-00309-01_base.csv  830-00310-01_tower.csv
standard_work/jaeger-p2/: README.md
standard_work/jaeger-p3/: base.md  tower.md
tests/: conftest.py  test_jira_client.py  test_main.py
utilities/: mroute_validator.py
